[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/ui/actions/EquipButton.gd" type="Script" id=1]
[ext_resource path="res://game_assets/gui/button_mask.png" type="Texture" id=2]
[ext_resource path="res://game_assets/gui/selector.png" type="Texture" id=3]
[ext_resource path="res://game_assets/gui/slot.png" type="Texture" id=4]
[ext_resource path="res://game/ui/actions/ClipPanel.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.811765, 0.392157, 0.227451, 1 )

[node name="EquipButton" type="MarginContainer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 0.025
anchor_bottom = 0.05
margin_left = 529.448
margin_top = 462.641
margin_right = 530.173
margin_bottom = 462.641
rect_min_size = Vector2( 50, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.811765, 0.392157, 0.227451, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 50.0
margin_bottom = 50.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 48.0
margin_bottom = 48.0
custom_styles/panel = SubResource( 1 )

[node name="Shading" type="TextureRect" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 48.0
margin_bottom = 48.0
rect_clip_content = true
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 48.0
margin_bottom = 48.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Icon" type="TextureRect" parent="MarginContainer/MarginContainer"]
self_modulate = Color( 1, 1, 1, 0.560784 )
margin_left = 5.0
margin_top = 5.0
margin_right = 41.0
margin_bottom = 41.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="TextureRect" parent="."]
margin_right = 50.0
margin_bottom = 50.0
rect_clip_content = true
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlight" type="TextureRect" parent="."]
visible = false
margin_right = 50.0
margin_bottom = 50.0
rect_clip_content = true
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer" type="Node2D" parent="."]
position = Vector2( -6.21777, 0 )

[node name="ClipPanel" type="Panel" parent="ItemContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -184.0
margin_top = -10.0
margin_right = 57.0
margin_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 57, 0 )
rect_clip_content = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ItemContainer/ClipPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClipPanelTween" type="Tween" parent="ItemContainer"]
[connection signal="gui_input" from="." to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
